fix TESB-25669 Some of CXF/Camel/TESB Examples can not be built on Ja… (#81)
* fix TESB-25669 Some of CXF/Camel/TESB Examples can not be built on Java 11

* fix(TESB-25669) switch to jakarta api and correction in feature xml

--- a/examples/cxf/jaxrs-jaxws-description-first/common/pom.xml
+++ b/examples/cxf/jaxrs-jaxws-description-first/common/pom.xml
@@ -20,9 +20,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>javax.jws</groupId>
+            <artifactId>javax.jws-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.cxf.xjc-utils</groupId>
             <artifactId>cxf-xjc-runtime</artifactId>
-            <version>3.0.3</version>
+            <version>${cxf.xjc.version}</version>
         </dependency>
     </dependencies>
 
