--- a/examples/cxf/jaxrs-jms-http/common/pom.xml
+++ b/examples/cxf/jaxrs-jms-http/common/pom.xml
@@ -18,6 +18,13 @@
         <relativePath>..</relativePath>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
