--- a/examples/tesb/camel-jmx/service/pom.xml
+++ b/examples/tesb/camel-jmx/service/pom.xml
@@ -46,6 +46,12 @@
 			<artifactId>activemq-osgi</artifactId>
 			<version>${activemq.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-pool</artifactId>
