--- a/examples/tesb/locator/common/pom.xml
+++ b/examples/tesb/locator/common/pom.xml
@@ -25,6 +25,13 @@
         <version>7.2.1-SNAPSHOT</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>javax.jws</groupId>
+            <artifactId>javax.jws-api</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
