--- a/examples/cxf/jaxrs-jms-http/common/pom.xml
+++ b/examples/cxf/jaxrs-jms-http/common/pom.xml
@@ -20,8 +20,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
         </dependency>
     </dependencies>
 
