--- a/talend-esb/src/main/distribution/text/container/etc/custom.properties
+++ b/talend-esb/src/main/distribution/text/container/etc/custom.properties
@@ -36,6 +36,7 @@ org.osgi.framework.system.packages.extra = \
     com.sun.jmx.mbeanserver, \
     com.sun.management, \
     sun.management, \
+    javax.xml.soap;uses:=\"javax.activation,javax.xml.namespace,javax.xml.transform,javax.xml.transform.dom,org.w3c.dom\";version=1.4.1, \
     org.apache.xerces.dom;uses:=\"org.apache.xerces.dom3.as,org.apache.xerces.impl,org.apache.xerces.impl.dv,org.apache.xerces.impl.validation,org.apache.xerces.impl.xs,org.apache.xerces.util,org.apache.xerces.xni,org.apache.xerces.xni.parser,org.apache.xerces.xs,org.w3c.dom,org.w3c.dom.events,org.w3c.dom.ls,org.w3c.dom.ranges,org.w3c.dom.traversal\";version=2.12.0, \
     org.apache.xerces.dom.events;uses:=\"org.w3c.dom,org.w3c.dom.events,org.w3c.dom.views\";version=2.12.0, \
     org.apache.xerces.dom3.as;uses:=\"org.w3c.dom,org.w3c.dom.ls\";version=2.12.0, \
