--- a/examples/tesb/ebook/ebook-backend/pom.xml
+++ b/examples/tesb/ebook/ebook-backend/pom.xml
@@ -32,6 +32,11 @@
              <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+        <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>javax.persistence</artifactId>
             <version>2.1.0</version>
