--- a/job/controller/src/test/feature/pom.xml
+++ b/job/controller/src/test/feature/pom.xml
@@ -60,7 +60,7 @@
 	<repositories>
 		<repository>
 			<id>apache-snapshots</id>
-			<url>http://repository.apache.org/snapshots</url>
+			<url>https://repository.apache.org/snapshots</url>
 			<name>Apache Snapshots Repo</name>
 			<snapshots>
 				<enabled>true</enabled>
@@ -73,7 +73,7 @@
 	<pluginRepositories>
 		<pluginRepository>
 			<id>apache-snapshots</id>
-			<url>http://repository.apache.org/snapshots</url>
+			<url>https://repository.apache.org/snapshots</url>
 			<name>Apache Snapshots Repo</name>
 			<snapshots>
 				<enabled>true</enabled>
