--- a/examples/tesb/library-service/client/pom.xml
+++ b/examples/tesb/library-service/client/pom.xml
@@ -92,6 +92,11 @@
             <artifactId>spring-web</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>        
 
         <!-- logging -->
         <dependency>
