--- a/examples/tesb/sam/sam-example-client/pom.xml
+++ b/examples/tesb/sam/sam-example-client/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>cxf-xjc-runtime</artifactId>
             <version>${cxf.xjc.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
