--- a/examples/tesb/library-service/common/pom.xml
+++ b/examples/tesb/library-service/common/pom.xml
@@ -34,8 +34,8 @@
 
 		<!-- CXF -->
         <dependency>
-            <groupId>jakarta.xml.ws</groupId>
-            <artifactId>jakarta.xml.ws-api</artifactId>
+            <groupId>org.apache.servicemix.specs</groupId>
+            <artifactId>org.apache.servicemix.specs.jaxws-api-2.2</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
