--- a/examples/tesb/rent-a-car/crmservice/common/pom.xml
+++ b/examples/tesb/rent-a-car/crmservice/common/pom.xml
@@ -36,8 +36,8 @@
             <artifactId>geronimo-ws-metadata_2.0_spec</artifactId>
         </dependency>
         <dependency>
-            <groupId>jakarta.xml.ws</groupId>
-            <artifactId>jakarta.xml.ws-api</artifactId>
+            <groupId>org.apache.servicemix.specs</groupId>
+            <artifactId>org.apache.servicemix.specs.jaxws-api-2.2</artifactId>
         </dependency>
     </dependencies>
 
