--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -42,6 +42,7 @@
         <pax-logging.version>1.10.1</pax-logging.version>
         <javax-annotation.version>1.3.1</javax-annotation.version>
         <blueprint.core.version>1.8.3</blueprint.core.version>
+        <jackson.version>2.9.9</jackson.version>
 	</properties>
 
 	<dependencies>
@@ -1049,6 +1050,28 @@
                                         <replacetoken>&lt;bundle start-level="25"&gt;mvn:org.jvnet.staxex/stax-ex/1.7.6&lt;/bundle&gt;</replacetoken>
                                         <replacevalue></replacevalue>
                                     </replacefilter>
+                                    <!-- patch the jackson version (TESB-26035) -->
+                                    <replacefilter
+                                        token="mvn:com.fasterxml.jackson.core/jackson-core/2.9.8"
+                                        value="mvn:com.fasterxml.jackson.core/jackson-core/${jackson.version}"/>
+                                    <replacefilter
+                                        token="mvn:com.fasterxml.jackson.core/jackson-databind/2.9.8"
+                                        value="mvn:com.fasterxml.jackson.core/jackson-databind/${jackson.version}"/>
+                                    <replacefilter
+                                        token="mvn:com.fasterxml.jackson.core/jackson-annotations/2.9.8"
+                                        value="mvn:com.fasterxml.jackson.core/jackson-annotations/${jackson.version}"/>
+                                    <replacefilter
+                                        token="mvn:com.fasterxml.jackson.dataformat/jackson-dataformat-yaml/2.9.8"
+                                        value="mvn:com.fasterxml.jackson.dataformat/jackson-dataformat-yaml/${jackson.version}"/>
+                                    <replacefilter
+                                        token="mvn:com.fasterxml.jackson.module/jackson-module-jaxb-annotations/2.9.8"
+                                        value="mvn:com.fasterxml.jackson.module/jackson-module-jaxb-annotations/${jackson.version}"/>
+                                    <replacefilter
+                                        token="mvn:com.fasterxml.jackson.jaxrs/jackson-jaxrs-base/2.9.8"
+                                        value="mvn:com.fasterxml.jackson.jaxrs/jackson-jaxrs-base/${jackson.version}"/>
+                                    <replacefilter
+                                        token="mvn:com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider/2.9.8"
+                                        value="mvn:com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider/${jackson.version}"/>
                                 </replace>
                                 <replace file="target/dependencies/pax-web-features-${pax-web.version}-features.xml">
                                     <!-- commons-collections version patch (TESB-16945) -->
@@ -1107,6 +1130,16 @@
                                     <replacefilter
                                         token="&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xstream/1.4.8_1&lt;"
                                         value="&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xstream/1.4.10_1&lt;"/>
+                                    <!-- patch the jackson version (TESB-26035) -->
+                                    <replacefilter
+                                        token="mvn:com.fasterxml.jackson.core/jackson-core/2.9.8"
+                                        value="mvn:com.fasterxml.jackson.core/jackson-core/${jackson.version}"/>
+                                    <replacefilter
+                                        token="mvn:com.fasterxml.jackson.core/jackson-databind/2.9.8"
+                                        value="mvn:com.fasterxml.jackson.core/jackson-databind/${jackson.version}"/>
+                                    <replacefilter
+                                        token="mvn:com.fasterxml.jackson.core/jackson-annotations/2.9.8"
+                                        value="mvn:com.fasterxml.jackson.core/jackson-annotations/${jackson.version}"/>
                                 </replace>
                                 <!-- patch for decanter bundles (TESB-24788) -->
                                 <replace file="target/dependencies/apache-karaf-decanter-${decanter.version}-features.xml">
