fix TESB-25669 tesb locator example

--- a/talend-esb/src/main/distribution/text/container/etc/custom.properties
+++ b/talend-esb/src/main/distribution/text/container/etc/custom.properties
@@ -146,4 +146,5 @@ org.osgi.framework.bootdelegation = \
 # Adds event logging package to classes that can be serialized in ObjectMessages
 org.apache.activemq.SERIALIZABLE_PACKAGES=java.lang,java.util,org.apache.activemq,org.fusesource.hawtbuf,com.thoughtworks.xstream.mapper,org.talend.esb.eventlogging.common
 
-
+# Makes the internal packages visible
+osgi.compatibility.bootdelegation=true
