--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -38,7 +38,7 @@
         <wss4j.version>2.2.2</wss4j.version>
         <xerces.version>2.12.0_1</xerces.version>
         <log4j.version>1.2.17</log4j.version>
-        <pax-web.version>7.2.8</pax-web.version>
+        <pax-web.version>7.2.10</pax-web.version>
         <pax-logging.version>1.10.1</pax-logging.version>
         <javax-annotation.version>1.3.1</javax-annotation.version>
         <blueprint.core.version>1.8.3</blueprint.core.version>
@@ -134,7 +134,7 @@
                                 <feature>jndi</feature>
                                 <feature>jms</feature>
                                 <feature>aries-blueprint-spring</feature>
-                                <!-- pax-web version patch (TESB-19140) -->
+                                <!-- pax-web version patch (TESB-25945) -->
                                 <feature>pax-jetty/${jetty.version}</feature>
                                 <feature>pax-jetty-http2/${pax-web.version}</feature>
                                 <feature>pax-war/${pax-web.version}</feature>
@@ -567,17 +567,7 @@
                                     <outputDirectory>target/dependencies</outputDirectory>
                                     <destFileName>org.apache.karaf.jaas.boot-${karaf.version}.jar</destFileName>
                                 </artifactItem>
-                                <!-- commons-collections version patch (TESB-16945) -->
-                                <artifactItem>
-                                    <groupId>org.ops4j.pax.web</groupId>
-                                    <artifactId>pax-web-features</artifactId>
-                                    <version>${pax-web.version}</version>
-                                    <classifier>features</classifier>
-                                    <type>xml</type>
-                                    <outputDirectory>target/dependencies</outputDirectory>
-                                    <destFileName>pax-web-features-${pax-web.version}-features.xml</destFileName>
-                                </artifactItem>
-                                <!-- patch the jetty version (TESB-22886) -->
+                                <!-- patch the jetty version (TESB-25945) -->
                                 <artifactItem>
                                     <groupId>org.apache.karaf.features</groupId>
                                     <artifactId>standard</artifactId>
@@ -1073,12 +1063,6 @@
                                         token="mvn:com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider/2.9.8"
                                         value="mvn:com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider/${jackson.version}"/>
                                 </replace>
-                                <replace file="target/dependencies/pax-web-features-${pax-web.version}-features.xml">
-                                    <!-- commons-collections version patch (TESB-16945) -->
-                                    <replacefilter
-                                        token="commons-collections/commons-collections/3.2.1"
-                                        value="commons-collections/commons-collections/${commons-collections.version}"/>
-                                </replace>
                                 <replace file="target/dependencies/framework-${karaf.version}-features.xml">
                                     <!-- patch for pax-logging-log4j2 (TESB-20573) -->
                                     <replacefilter
@@ -1102,6 +1086,17 @@
                                     <replacefilter
                                         token="mvn:org.apache.karaf.config/org.apache.karaf.config.core/${karaf.version}&lt;"
                                         value="mvn:org.apache.karaf.config/org.apache.karaf.config.core/${karaf.version}.tesb1&lt;"/>
+                                    <!-- upgrade Jetty version to 9.4.18.v20190429 (TESB-25945) -->
+                                    <replacefilter
+                                        token="9.4.12.v20180830"
+                                        value="${jetty.version}"/>
+                                    <replacefilter
+                                        token="mvn:org.ops4j.pax.web/pax-web-features/7.2.8/xml/features"
+                                        value="mvn:org.ops4j.pax.web/pax-web-features/${pax-web.version}/xml/features"/>
+                                    <replacefilter>
+                                        <replacetoken>feature name="pax-http-service" description="Pax-Web OSGi HTTP Service" version="7.2.8"</replacetoken>
+                                        <replacevalue>feature name="pax-http-service" description="Pax-Web OSGi HTTP Service" version="${pax-web.version}"</replacevalue>
+                                    </replacefilter>
                                  </replace>
                                  <!-- patch for pax-logging-log4j2 (TESB-20573) -->
                                  <replaceregexp byline="true"
