--- a/examples/tesb/locator/war/pom.xml
+++ b/examples/tesb/locator/war/pom.xml
@@ -47,6 +47,11 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>${spring.version}</version>
         </dependency>
@@ -64,30 +69,22 @@
 
     <build>
         <finalName>services</finalName>
-	    <plugins>
-		    <plugin>
-		        <groupId>org.mortbay.jetty</groupId>
-		        <artifactId>jetty-maven-plugin</artifactId>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
 
+                <!-- Note that since Jetty 9.0 it is no longer possible to configure a https connector directly in the pom.xml,
+                     you need to use jetty xml config files to do it.
+                     For details see https://www.eclipse.org/jetty/documentation/9.4.x/jetty-maven-plugin.html
+                     Now only the http port will be started when "mvn jetty:run" -->
 		        <configuration>
-		            <connectors>
-		                <connector
-		                    implementation="org.eclipse.jetty.server.ssl.SslSelectChannelConnector">
-		                    <port>9080</port>
-                            <keystore>src/main/webapp/certs/keystore.jks</keystore>
-                            <keyPassword>password</keyPassword>
-                            <password>password</password>
-                            <truststore>src/main/webapp/certs/keystore.jks</truststore>
-		                </connector>
-		                <connector
-		                    implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-		                    <port>8080</port>
-		                    <maxIdleTime>60000</maxIdleTime>
-		                </connector>
-		            </connectors>
-		        </configuration>		        
-		        
-		    </plugin>
-	    </plugins>
-	</build>
+                    <httpConnector>
+                        <port>8080</port>
+                    </httpConnector>
+		        </configuration>
+
+            </plugin>
+        </plugins>
+    </build>
 </project>
