TESB-25945 Minor pax-web dependency correction.

--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -253,6 +253,7 @@
                                 <feature>jms</feature>
                                 <feature>aries-blueprint-spring</feature>
                                 <!-- pax-web version patch (TESB-25945) -->
+                                <feature>pax-web-core/${pax-web.version}</feature>
                                 <feature>pax-jetty/${jetty.version}</feature>
                                 <feature>pax-jetty-http2/${pax-web.version}</feature>
                                 <feature>pax-war/${pax-web.version}</feature>
