TESB-25945 patch the cxf-rt-transports-http-jetty (#101)

--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -1419,6 +1419,10 @@
                                     <replacefilter
                                         token="mvn:com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider/2.9.8"
                                         value="mvn:com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider/${jackson.version}"/>
+                                    <!-- patch for cxf-rt-transports-http-jetty (TESB-25945) -->
+                                    <replacefilter
+                                        token="mvn:org.apache.cxf/cxf-rt-transports-http-jetty/3.3.1"
+                                        value="mvn:org.apache.cxf/cxf-rt-transports-http-jetty/3.3.1.tesb1"/>
                                 </replace>
                                 <replace file="target/dependencies/framework-${karaf.version}-features.xml">
                                     <!-- patch for pax-logging-log4j2 (TESB-20573) -->
