TESB-25945 Correct failing build.

--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -985,6 +985,13 @@
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
+                                <artifactItem>
+                                     <groupId>org.apache.cxf</groupId>
+                                     <artifactId>cxf-rt-transports-http-jetty</artifactId>
+                                     <version>${cxf.version}.tesb1</version>
+                                     <type>jar</type>
+                                     <outputDirectory>target/dependencies</outputDirectory>
+                                </artifactItem>
                             </artifactItems>
                         </configuration>
                     </execution>
