--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -1428,8 +1428,8 @@
                                         value="mvn:com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider/${jackson.version}"/>
                                     <!-- patch for cxf-rt-transports-http-jetty (TESB-25945) -->
                                     <replacefilter
-                                        token="mvn:org.apache.cxf/cxf-rt-transports-http-jetty/3.3.1"
-                                        value="mvn:org.apache.cxf/cxf-rt-transports-http-jetty/3.3.1.tesb1"/>
+                                        token="mvn:org.apache.cxf/cxf-rt-transports-http-jetty/3.3.1&lt;"
+                                        value="mvn:org.apache.cxf/cxf-rt-transports-http-jetty/3.3.1.tesb1&lt;"/>
                                 </replace>
                                 <replace file="target/dependencies/framework-${karaf.version}-features.xml">
                                     <!-- patch for pax-logging-log4j2 (TESB-20573) -->
