--- a/examples/cxf/jaxrs-advanced/client/pom.xml
+++ b/examples/cxf/jaxrs-advanced/client/pom.xml
@@ -37,7 +37,7 @@
         <dependency>
            <groupId>org.codehaus.jettison</groupId>
            <artifactId>jettison</artifactId>
-           <version>1.3.1</version>
+           <version>${jettison.version}</version>
         </dependency>
     </dependencies>
 
