--- a/examples/cxf/jaxrs-oauth2/war/pom.xml
+++ b/examples/cxf/jaxrs-oauth2/war/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
            <groupId>org.codehaus.jettison</groupId>
            <artifactId>jettison</artifactId>
-           <version>1.3.1</version>
+           <version>${jettison.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
