fix TESB-26469 [7.2.1] Error starting sam-server webapp

--- a/sam/sam-server-war/src/main/webapp/WEB-INF/logserver.properties
+++ b/sam/sam-server-war/src/main/webapp/WEB-INF/logserver.properties
@@ -59,6 +59,10 @@ sam.service.soap.authentication = NO
 # Authentication method NO,BASIC,SAML
 sam.service.rest.authentication = NO
 
+# these properties only applicable when "USERNAMETOKEN" or "SAML" authentication enabled
+policy.ut=file:${tesb.home}/etc/org.talend.esb.job.token.policy
+policy.saml=file:${tesb.home}/etc/org.talend.esb.job.saml.policy
+
 # these properties only applicable when "SAML" authentication enabled
 security.signature.properties=file:${tesb.home}/etc/keystores/serviceKeystore.properties
 security.signature.username=myservicekey
