--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
         <derby.version>10.14.2.0</derby.version>
         <derby.servicemix.version>10.14.2.0_2</derby.servicemix.version>
         <slf4j.version>1.7.12</slf4j.version>
+        <commons-codec.version>1.13</commons-codec.version>
         <commons-lang.version>2.6</commons-lang.version>
         <commons-lang3.version>3.8.1</commons-lang3.version>
         <dom4j.bundle.version>1.6.1_5</dom4j.bundle.version>
