--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
         <commons-dbcp.version>1.4</commons-dbcp.version>
         <commons-dbcp.bundle.version>1.4_3</commons-dbcp.bundle.version>
         <commons-collections.version>3.2.2</commons-collections.version>
-        <commons-beanutils.version>1.8.3_1</commons-beanutils.version>
+        <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <commons-jxpath.version>1.3</commons-jxpath.version>
         <jdom.bundle.version>1.1_4</jdom.bundle.version>
         <osgi.core.version>6.0.0</osgi.core.version>
